cabal-version:      2.4
name:               classy-containers
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.4
copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/classy-containers/
bug-reports:        https://github.com/tbidne/classy-containers/issues
synopsis:           Typeclasses for container types
description:        Typeclasses for container types
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/classy-containers

common common-exts
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

library
  import:           common-exts
  exposed-modules:
    Containers.Class
    Containers.Class.CMap
    Containers.Class.Difference
    Containers.Class.Empty
    Containers.Class.Insert
    Containers.Class.Member
    Containers.Class.Sequenced
    Containers.Class.Union

  build-depends:
    , base                  >=4.14.0.0 && <4.18
    , containers            >=0.5.11.0 && <0.7
    , hashable              >=1.3.0.0  && <1.5
    , unordered-containers  ^>=0.2.9.0

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
